--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "name": "FlashCard",
     "version": "0.1.0",
     "dependencies": {
-            "express": "~4.0"
+            "express": "~4.0",
+			"mongodb": "~2.0",
+			"mongoose": "~3.0"
     },
-	"author": "Cartesianfox",
+	"author": "Project24",
 	"description": "A flash card game."
 
 }
